--- a/playbooks/site.yml
+++ b/playbooks/site.yml
@@ -1,3 +1,4 @@
 ---
-- host: all
-- import_playbook: ../static-assignments/common-del.yml
+- hosts: all
+  tasks:
+    - import_playbook: ../static-assignments/common.yml
